--- a/hn-tango-theme.css
+++ b/hn-tango-theme.css
@@ -13,7 +13,7 @@
   .comhead { font-size:  .8rem; }
   .comment { font-size:  1rem; }
 
-  a:link , .title a, .c00, .c00 a:link, .c5a, .c5a a:link, .c5a a:visited {
+  a:link , .title a, .c00, .c00 a:link, .c5a, .c5a a:link, .c5a a:visited, .pagetop a:visited {
     color: #eeeeec;
   }
   /* downvoted / greyed out */
@@ -25,7 +25,7 @@
     color: #2e3434;
   }
 
-  .hnmore a:link, a:visited, .pagetop a:visited, .comhead a:link, .subtext a:visited, .subtext, .subtext a:link, .subtext a:visited {
+  .hnmore a:link, a:visited, .comhead a:link, .subtext a:visited, .subtext, .subtext a:link, .subtext a:visited {
     color: #d3d7cf;
   }
 
